--- a/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
+++ b/FunctionList_Swift/FunctionList_Swift/View/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ReC-Fv-JgC">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -170,7 +170,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Cf-Vi-8Hu">
-                                <rect key="frame" x="50" y="89" width="314" height="100"/>
+                                <rect key="frame" x="50" y="133" width="314" height="100"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9FQ-0y-a8g">
                                         <rect key="frame" x="0.0" y="0.0" width="314" height="56"/>
@@ -193,23 +193,23 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oEG-vY-5h8">
-                                <rect key="frame" x="50" y="231" width="46" height="30"/>
+                                <rect key="frame" x="50" y="275" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Kjh-8i-5Ev"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W8H-nC-skP">
-                                <rect key="frame" x="50" y="303" width="240" height="98"/>
+                                <rect key="frame" x="50" y="347" width="240" height="88"/>
                             </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="akI-hQ-Lc3">
-                                <rect key="frame" x="48" y="455" width="318" height="31"/>
+                                <rect key="frame" x="48" y="489" width="318" height="31"/>
                                 <connections>
                                     <action selector="brightnessChange:" destination="RSf-lf-uYZ" eventType="valueChanged" id="LeG-V3-1dF"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="brightnessValue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3u-rY-1bU">
-                                <rect key="frame" x="50" y="426" width="122" height="21"/>
+                                <rect key="frame" x="50" y="460" width="122" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="5hE-EA-cpO"/>
                                     <constraint firstAttribute="height" constant="21" id="p6V-V4-TPd"/>
@@ -219,7 +219,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flash on" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2b-CJ-xxV">
-                                <rect key="frame" x="50" y="493" width="64" height="21"/>
+                                <rect key="frame" x="50" y="527" width="64" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="MmW-Zz-Omx"/>
                                     <constraint firstAttribute="height" constant="21" id="afJ-Lt-z6C"/>
@@ -229,7 +229,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FL2-FF-aWz">
-                                <rect key="frame" x="313" y="493" width="51" height="21"/>
+                                <rect key="frame" x="313" y="527" width="51" height="21"/>
                                 <connections>
                                     <action selector="keepScreenOn:" destination="RSf-lf-uYZ" eventType="valueChanged" id="xbC-AI-gxY"/>
                                 </connections>
@@ -344,7 +344,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lDn-Ji-CGe">
-                                <rect key="frame" x="139.5" y="63" width="135" height="31"/>
+                                <rect key="frame" x="139.5" y="107" width="135" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="YMo-g4-QoH"/>
                                 </constraints>
@@ -355,7 +355,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T24-bp-4ys">
-                                <rect key="frame" x="152" y="114" width="110" height="31"/>
+                                <rect key="frame" x="152" y="158" width="110" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Custom Error"/>
                                 <connections>
@@ -467,7 +467,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iFh-hp-Pjc" customClass="MyInspector" customModule="FunctionList_Swift" customModuleProvider="target">
-                                <rect key="frame" x="100" y="100" width="214" height="31"/>
+                                <rect key="frame" x="100" y="144" width="214" height="31"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Sign in with Apple ">
@@ -492,7 +492,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hPd-pi-yT1" customClass="DesignableUITextField" customModule="FunctionList_Swift" customModuleProvider="target">
-                                <rect key="frame" x="50" y="161" width="314" height="34"/>
+                                <rect key="frame" x="50" y="205" width="314" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <userDefinedRuntimeAttributes>
@@ -571,6 +571,7 @@
                         <segue destination="RSf-lf-uYZ" kind="show" identifier="TestView" id="mtf-5B-xEC"/>
                         <segue destination="ORc-gT-6VU" kind="show" identifier="SignInAppleVC" id="S0J-v2-Oyp"/>
                         <segue destination="n8k-UE-ati" kind="show" identifier="httpNetworkVC" id="cSd-uj-mnT"/>
+                        <segue destination="cui-pM-Us3" kind="show" identifier="NFCVC" id="UOu-zd-VaY"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1kY-5X-DRv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -586,7 +587,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="axa-Zo-90i">
-                                <rect key="frame" x="100" y="200" width="214" height="199"/>
+                                <rect key="frame" x="100" y="244" width="214" height="199"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xqu-Ux-pSL">
                                         <rect key="frame" x="69" y="0.0" width="76.5" height="31"/>
@@ -633,28 +634,28 @@
                                 <color key="tintColor" red="0.42745098040000001" green="0.35294117650000001" blue="0.89023774860000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Result : " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nKg-sG-LK1">
-                                <rect key="frame" x="20" y="409" width="374" height="389"/>
+                                <rect key="frame" x="20" y="453" width="374" height="379"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZH-Lh-K3T">
-                                <rect key="frame" x="50" y="70" width="314" height="31"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZN-NM-6LR">
+                                <rect key="frame" x="50" y="165" width="314" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="SIgn In with Google"/>
+                                <connections>
+                                    <action selector="signInGoogle:" destination="n8k-UE-ati" eventType="touchUpInside" id="TlE-x2-AEj"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZH-Lh-K3T">
+                                <rect key="frame" x="50" y="113" width="314" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="SingIn with APPLE">
                                     <backgroundConfiguration key="background"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="signInApple:" destination="n8k-UE-ati" eventType="touchUpInside" id="0c9-DB-Ku9"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZN-NM-6LR">
-                                <rect key="frame" x="50" y="121" width="314" height="31"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="SIgn In with Google"/>
-                                <connections>
-                                    <action selector="signInGoogle:" destination="n8k-UE-ati" eventType="touchUpInside" id="TlE-x2-AEj"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -681,6 +682,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rfV-vf-qOD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-413.04347826086962" y="-1396.2053571428571"/>
+        </scene>
+        <!--NFC View Controller-->
+        <scene sceneID="JLq-XA-3lK">
+            <objects>
+                <viewController storyboardIdentifier="NFCViewController" id="cui-pM-Us3" userLabel="NFC View Controller" customClass="NFCViewController" customModule="FunctionList_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cjb-UU-RCC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N4y-3n-ZPU">
+                                <rect key="frame" x="50" y="94" width="314" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="xag-m6-5zb"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="NFC TAG START"/>
+                                <connections>
+                                    <action selector="beginScanning:" destination="cui-pM-Us3" eventType="touchUpInside" id="6fx-dZ-mtl"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VHz-xe-eLl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VHz-xe-eLl" firstAttribute="trailing" secondItem="N4y-3n-ZPU" secondAttribute="trailing" constant="50" id="XqA-XH-6Nn"/>
+                            <constraint firstItem="N4y-3n-ZPU" firstAttribute="leading" secondItem="VHz-xe-eLl" secondAttribute="leading" constant="50" id="ju4-qe-EeJ"/>
+                            <constraint firstItem="N4y-3n-ZPU" firstAttribute="top" secondItem="VHz-xe-eLl" secondAttribute="top" constant="50" id="o4t-rx-76z"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="egg-F4-4Bg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JIc-Je-3Y2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="811" y="-1376"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="okj-h2-Dyp">
@@ -966,7 +1001,7 @@
     </scenes>
     <designables>
         <designable name="hPd-pi-yT1">
-            <size key="intrinsicContentSize" width="56" height="34"/>
+            <size key="intrinsicContentSize" width="32" height="34"/>
         </designable>
     </designables>
     <resources>
